force-app/main/default/objects/clofor_com_cfs__BankAccount__c/clofor_com_cfs__BankAccount__c.object-meta.xml
<CustomObject>
    <label>口座・現金帳</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>BANK ACC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>