force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Saving Account</fullName>
            </value>
            <value>
                <fullName>2. Checking Account</fullName>
            </value>
            <value>
                <fullName>4. Savings Deposit</fullName>
            </value>
            <value>
                <fullName>9. Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>