force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/AccountTypeCode__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeCode__c</fullName>
    <formula>LEFT( TEXT(AccountType__c) , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type Code</label>
    <type>Text</type>
</CustomField>