force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/BankAccountNameinKatakana__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNameinKatakana__c</fullName>
    <label>Bank Account Name in Katakana</label>
    <length>255</length>
    <type>Text</type>
</CustomField>