force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>Bank Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>