force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/BankNameinEnglish__c.field-meta.xml
<CustomField>
    <fullName>BankNameinEnglish__c</fullName>
    <label>Bank Name in English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>