force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>