force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__Account__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BANK ACC (Account)</relationshipLabel>
    <relationshipName>BANKACC</relationshipName>
    <type>Lookup</type>
</CustomField>