force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankACAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankACAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK A/C ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK A/C ACCOUNTING CODE</relationshipLabel>
    <relationshipName>BankACAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>