force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankAccountCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountCurrency__c</fullName>
    <label>BANK ACCOUNT CURRENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__Currency</valueSetName>
    </valueSet>
</CustomField>