force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankAccountNameInEng__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountNameInEng__c</fullName>
    <label>BANK ACCOUNT NAME IN ENGLISH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>