force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountNumber__c</fullName>
    <label>BANK ACCOUNT NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>