force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankCity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankCity__c</fullName>
    <label>Bank City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__City_Province</valueSetName>
    </valueSet>
</CustomField>