force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankOfficialName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankOfficialName__c</fullName>
    <label>BANK OFFICIAL NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>