force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__BankPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankPhoneNumber__c</fullName>
    <label>BANK PHONE NUMBER</label>
    <type>Phone</type>
</CustomField>