force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__FullNameOfAuthorizedPerson__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FullNameOfAuthorizedPerson__c</fullName>
    <label>FULL NAME OF AUTHORIZED PERSON</label>
    <length>50</length>
    <type>Text</type>
</CustomField>