force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__IFSCCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IFSCCode__c</fullName>
    <label>IFSC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>