force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__InternetBankingIssuedDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InternetBankingIssuedDate__c</fullName>
    <label>INTERNET BANKING ISSUED DATE</label>
    <type>Date</type>
</CustomField>