force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__MICRCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MICRCode__c</fullName>
    <label>MICR Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>