force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__PICInternetBanking__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICInternetBanking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C OF INTERNET BANKING</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>BANK_ACCOUNT</relationshipName>
    <type>Lookup</type>
</CustomField>