force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/clofor_com_cfs__SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SwiftCode__c</fullName>
    <label>SWIFT CODE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>