force-app/main/default/objects/clofor_com_cfs__BankAccount__c/fields/InternalBankAccount__c.field-meta.xml
<CustomField>
    <fullName>InternalBankAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this checkbox if this Bank Account belongs to Shintoyo Gate</inlineHelpText>
    <label>Internal Bank Account</label>
    <type>Checkbox</type>
</CustomField>