force-app/main/default/objects/clofor_com_cfs__BankAccount__c/recordTypes/clofor_com_cfs__BankAccount.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__BankAccount</fullName>
    <active>true</active>
    <description>To manage Bank Account</description>
    <label>BANK ACCOUNT</label>
</RecordType>