force-app/main/default/objects/clofor_com_cfs__BankAccount__c/recordTypes/clofor_com_cfs__Cashbook.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Cashbook</fullName>
    <active>false</active>
    <description>To manage Cash Book</description>
    <label>CASH BOOK</label>
</RecordType>