force-app/main/default/objects/clofor_com_cfs__BankAccount__c/recordTypes/InternationalMoneyTransferServiceProvider.recordType-meta.xml
<RecordType>
    <fullName>InternationalMoneyTransferServiceProvider</fullName>
    <active>true</active>
    <label>International Money Transfer Service Provider</label>
</RecordType>