force-app/main/default/objects/clofor_com_cfs__BankAccount__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__BankMaster__c</columns>
    <columns>clofor_com_cfs__BankAccountCurrency__c</columns>
    <columns>clofor_com_cfs__BankAccountNameInEng__c</columns>
    <columns>clofor_com_cfs__BankBranchName__c</columns>
    <columns>clofor_com_cfs__BankAccountNumber__c</columns>
    <columns>clofor_com_cfs__BankAccountNameInLocal__c</columns>
    <columns>clofor_com_cfs__BankAccountType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>